added schema and updated swagger json
